--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "layout_style": "overflow",
     "palette": "blue",
     "header": {
-        "title": "Stackbit Fresh",
+        "title": "Thanh Dang",
         "tagline": "Header Tagline",
         "profile_img": "images/jelly_greenbackground_blackshirt (1).png",
         "profile_img_alt": "Author avatar",
