config.json: updated tagline in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "palette": "blue",
     "header": {
         "title": "Thanh Dang",
-        "tagline": "Header Tagline",
+        "tagline": "Web Developer",
         "profile_img": "images/jelly_greenbackground_blackshirt (1).png",
         "profile_img_alt": "Author avatar",
         "background": "dark",
